# sdss_access

./: .bumpversion.cfg  .coveragerc  .flake8  .gitattributes  .gitignore  .pylintrc  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  STYLE.rst  readthedocs.yml  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.cfg  setup.py  tasks.py
.github/workflows/: build.yml  pythonapp.yml  pythonpublish.yml  release.yml  sphinxbuild.yml
docs/sphinx/: api.rst  auth.rst  conf.py  index.rst  installation.rst  intro.rst  path_defs.rst  path_evolution.rst  paths.rst
docs/sphinx/_static/: custom.css
etc/: .netrc.enc
python/sdss_access/: __init__.py
python/sdss_access/etc/: sdss_access.yml
python/sdss_access/misc/: __init__.py  color_print.py  docupaths.py  logger.py
python/sdss_access/path/: __init__.py  changelog.py  path.py
python/sdss_access/sync/: __init__.py  access.py  auth.py  baseaccess.py  cli.py  curl.py  http.py  rsync.py  stream.py  system_call.py
tests/: conftest.py
tests/data/: paths.yaml
tests/misc/: test_docupaths.py
tests/path/: test_changelog.py  test_path.py  test_sdss5.py
tests/prof/: combined.prof  test_any.prof  test_commit[DR15].prof  test_commit[work].prof  test_dir.prof  test_envvar_expansion.prof  test_existence[local-False].prof  test_existence[remote-True].prof  test_expand.prof  test_extract[fpc].prof  test_extract[galaxy].prof  test_extract[mangacube].prof  test_extract[reject].prof  test_extract_source.prof  test_final_stream[DR15-datapath0].prof  test_final_stream[work-datapath0].prof  test_get_locations[DR15-datapath0].prof  test_get_locations[work-datapath0].prof  test_get_paths[DR15-datapath0].prof  test_get_paths[work-datapath0].prof  test_initial_stream[DR15-datapath0].prof  test_initial_stream[work-datapath0].prof  test_location.prof  test_lookup_keys[mangacube-keys0].prof  test_lookup_keys[plateLines-keys1].prof  test_lookup_names.prof  test_missing_keys.prof  test_name.prof  test_onerandom[one].prof  test_onerandom[random].prof  test_public.prof  test_refine.prof  test_rsync[DR15-datapath0].prof  test_rsync[work-datapath0].prof  test_set_username_interactively.prof  test_special_function[platedir_p4].prof  test_special_function[platedir_p5].prof  test_special_function[spectrodir_r1].prof  test_special_function[spectrodir_r2].prof  test_url.prof
tests/sync/: test_access.py  test_auth.py  test_curl.py  test_http.py  test_rsync.py
ups/: sdss_access.table
(+11 files in other folders)
