[metadata]
name = sdss-access
version = 1.1.1dev
author = Brian Cherinka
author_email = bcherinka@stsci.edu
description = Package to dynamically build filepaths and access all SDSS SAS products
url = https://github.com/sdss/sdss_access
project_urls =
	Repository = https://github.com/sdss/sdss_access
	Documentation = https://sdss-access.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:
package_dir =
	= python
install_requires =
    six>=1.11
    requests>=2.10.0
    sdss-tree>=3.0.0
	sdsstools>=0.1.7
	tqdm>=4.46.0

scripts =

[options.packages.find]
where =
	python

[options.package_data]
sdss_access =
	etc/*

[options.extras_require]
dev =
	%(docs)s # This forces the docs extras to install (http://bit.ly/2Qz7fzb)
	ipython>=7.9.0
	matplotlib>=3.1.1
	flake8>=3.7.9
	doc8>=0.8.0
	pytest>=5.2.2
	pytest-cov>=2.8.1
	pytest-mock>=1.13.0
	pytest-sugar>=0.9.2
	isort>=4.3.21
	codecov>=2.0.15
	coverage[toml]>=5.0
    coveralls>=1.7
	ipdb>=0.12.3
	sdsstools[dev]>=0.1.0
	# The following are needed because sdsstools[dev] as an extra not always
	# gets installed. See https://github.com/pypa/pip/issues/4957.
	invoke>=1.3.0
	twine>=3.1.1
	wheel>=0.33.6

docs =
	Sphinx>=2.1.0
	sphinx_bootstrap_theme>=0.4.12
	recommonmark>=0.6

[isort]
line_length = 100
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = sdss_access
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
per-file-ignores =
    */__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov sdss_access --cov-report html -W ignore

[coverage:run]
branch = true
include =
	python/sdss_access/*
omit =
    */utils/*.py
    */__init__.py

[coverage:report]
exclude_lines =
